--- a/Document/【Zhugexubin】/ExpertTest/WebRoot/WEB-INF/web.xml
+++ b/Document/【Zhugexubin】/ExpertTest/WebRoot/WEB-INF/web.xml
@@ -29,6 +29,13 @@
     <servlet-name>loginServlet</servlet-name>
     <servlet-class>org.expert.servlet.loginServlet</servlet-class>
   </servlet>
+  <servlet>
+    <description>This is the description of my J2EE component</description>
+    <display-name>This is the display name of my J2EE component</display-name>
+    <servlet-name>UserExist</servlet-name>
+    <servlet-class>org.expert.servlet.UserExist</servlet-class>
+  </servlet>
+
 
   <servlet-mapping>
     <servlet-name>CoreServlet</servlet-name>
@@ -37,6 +44,10 @@
   <servlet-mapping>
     <servlet-name>loginServlet</servlet-name>
     <url-pattern>/loginServlet</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>UserExist</servlet-name>
+    <url-pattern>/UserExist</url-pattern>
   </servlet-mapping>
 
   <welcome-file-list>
