--- a/Document/【Zhugexubin】/ExpertTest/WebRoot/WEB-INF/web.xml
+++ b/Document/【Zhugexubin】/ExpertTest/WebRoot/WEB-INF/web.xml
@@ -35,6 +35,13 @@
     <servlet-name>UserExist</servlet-name>
     <servlet-class>org.expert.servlet.UserExist</servlet-class>
   </servlet>
+  <servlet>
+    <description>This is the description of my J2EE component</description>
+    <display-name>This is the display name of my J2EE component</display-name>
+    <servlet-name>expert_center</servlet-name>
+    <servlet-class>org.expert.servlet.expert_center</servlet-class>
+  </servlet>
+
 
 
   <servlet-mapping>
@@ -48,6 +55,10 @@
   <servlet-mapping>
     <servlet-name>UserExist</servlet-name>
     <url-pattern>/UserExist</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>expert_center</servlet-name>
+    <url-pattern>/expert_center</url-pattern>
   </servlet-mapping>
 
   <welcome-file-list>
